Text alignment for the index page fixed. Some minor bug fix.

--- a/css/gbRemake.css
+++ b/css/gbRemake.css
@@ -341,7 +341,7 @@
 }
 
 .justify {
-    text-align: justify;
+    text-align: right;
 }
 
 .getStartImg {
